<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.NickChose">

    <TextView
        android:id="@+id/nickChooseText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="15dp"
        android:text="@string/choose_nick_text"
        android:textAlignment="center"
        android:textColor="@color/colorDividerText"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginVertical="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_accent"
            android:inputType="textPersonName"
            android:lines="1"
            android:maxLength="15"
            android:maxLines="1"
            android:hint="@string/nick_placeholder"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="15sp" />

        <Button
            android:id="@+id/goBtn"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_primary"
            android:text="GO"
            android:onClick="validateNick"
            android:textColor="@color/colorPrimaryLight"
            android:textFontWeight="700" />
    </LinearLayout>

    <TextView
        android:id="@+id/incorrectNickError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/incorrect_nick_text"
        android:textAlignment="center"
        android:textColor="@color/colorDangerDark"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:paddingTop="10dp"
        android:src="@drawable/nick_page_image" />
</LinearLayout>