<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InstructionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/side_image"
            android:layout_width="231dp"
            android:layout_height="200dp"
            android:layout_gravity="bottom"
            android:src="@drawable/instruction_side_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:orientation="vertical"
            android:paddingHorizontal="30dp">

            <TextView
                android:id="@+id/gameControlHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingVertical="15sp"
                android:text="@string/game_control_header"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                >

                <ImageView
                    android:id="@+id/phoneTouchImage"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/phone_touch" />

                <TextView
                    android:id="@+id/touchInstructionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/touch_instruction_text"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/phoneRotateImage"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/phone_rotate" />

                <TextView
                    android:id="@+id/rotateInstructionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rotate_instruction_text"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>